k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: gomain-service

spec:
  selector:
    app: gomain
  type: ClusterIP
  ports:
  - name: gomain-service
    port: 80
    targetPort: 8000
    protocol: TCP
